加入新API:createUser
